webapp/titanembeds/static/css/embed.css
/* ... */
body, #overall-main-content {
  height: 100vh;
}

#overall-main-content {
  overflow-y: hidden;
}

main {
  overflow-y: scroll;
  min-height: calc(100vh - 80px);
  overflow-x: hidden;
  height: 100%;
  padding-bottom: 50px;
}

footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 50px;
  background-color: #37474F;
  background-color: var(--chatbox);
}

.navbar-fixed {
  position: fixed;
}

nav {
  background-color: #263238;
  background-color: var(--header);
  background: linear-gradient(#263238, rgba(38,50,56,0));
  background: linear-gradient(var(--header), rgba(38,50,56,0));
  box-shadow: none;
}

nav .brand-logo {
  font-size: 1.5rem;
}

@media only screen and (min-width: 601px) {
  nav a.button-collapse {
    display: block;
  }
}

@media only screen and (min-width: 993px) {
  .container {
    width: 85%;
  }
}

.side-nav {
  color: white;
  background-color: #607d8b;
  max-width: 95%;
}

.side-nav .userView .name {
  font-size: 20px;
}

.side-nav li>a {
  color: #eceff1;
}

.side-nav li>a[id^=channel] {
  margin-left: 7px;
}

.side-nav .subheader {
  color: #cfd8dc;
  font-variant: small-caps;
}

#members-nav {
  background-color: #607D8B;
  background-color: var(--rightsidebar);
}

#members-nav li>a {
  color: #ECEFF1;
  color: var(--noroleusers);
}

#members-nav li>a.role-title {
  height: unset;
  line-height: normal;
  padding-bottom: 20px;
  padding-top: 10px;
}

#members-nav li>a.subheader {
  height: fit-content;
  line-height: initial;
  padding-top: 15px;
}

#guild-nav {
  background-color: #607D8B;
  background-color: var(--leftsidebar);
  height: 100%;
  padding-bottom: 0px;
}

.side-nav div.divider {
  background-color: #90A4AE;
  background-color: var(--sidebardivider);
  margin-left: 10px;
  margin-right: 10px;
}

.role-title {
  margin-bottom: -15px !important;
  font-variant: normal !important;
  font-size: 80% !important;
}

.channel-hash {
  font-size: 95%;
  color: #b0bec5;
}

.membercircle {
  margin-top: 5px;
  height: 40px;
}

.membername {
  position: absolute;
  padding-left: 10px;
}

#chatcontent {
  padding-left: 1%;
  padding-top: 60px;
  word-wrap: break-word;
  margin-bottom: 60px;
}

#curuser_discrim,
#curuser_name {
  display: block;
}

#chatcontent > p {
  width: 90%;
  border-top: solid 1px rgba(0, 0, 0, 0.1);
  padding-top: 10px;
  margin-bottom: 0;
}

#chatcontent > p a.linkified {
  word-break: break-word;
}

#chatcontent > p.collapsed {
  border-top: none;
  margin-top: 0;
  padding-top: 0;
}

#chatcontent > p.collapsed > .chattimestamp, #chatcontent > p.collapsed > .chatusername, #chatcontent > p.collapsed > .authoravatar {
  display: none;
}

#chatcontent .chatusername {
  cursor: pointer;
}

#chatcontent .chatusername.discordbotsorgvoted {
  text-shadow: 2px 2px 10px yellow;
}

/*#chatcontent > p > span {*/
/*  display: table-row*/
/*}*/

::-webkit-input-placeholder {
  color: #636363;
  color: var(--placeholder);
}

:-moz-placeholder {
  color: #636363;
  color: var(--placeholder);
}

::-moz-placeholder {
  color: #636363;
  color: var(--placeholder);
}

:-ms-input-placeholder {
  color: #636363;
  color: var(--placeholder);
}

::-ms-input-placeholder {
  color: #636363;
  color: var(--placeholder);
}

#discord-members > li > a.subheader,
#members-nav > li:nth-child(1) > a,
#discord-members-count,
#embed-discord-members-count,
#members-nav > li:nth-child(4) > a,
#guest-members-count,
#members-nav > li:nth-child(6) > a {
  text-transform: uppercase;
}

.circle:hover {
  border-radius: 20px;
  background: linear-gradient(to right, #f9f9f9 90%, #fff);
}

#channels-list {
  display: block;
  margin-bottom: 40px;
}

#channels-list > li:hover {
  -webkit-filter: brightness(150%);
}

.subheader .channel-category {
  text-transform: uppercase;
}

.chatusername {
  font-weight: bold;
  color: #eceff1;
  margin-right: 10px;
  vertical-align: middle;
  font-size: 110%;
}

.chattimestamp {
  font-size: 11px;
  color: #90a4ae;
  margin-right: 3px;
}

.authoravatar {
  width: 100%;
  max-width: 30px;
  border-radius: 50%;
  vertical-align: middle;
  margin-right: 10px;
}

.footercontainer {
  display: flex;
  width: 100%;
  position: relative;
  margin: 10px;
  white-space: nowrap;
  overflow: hidden;
  border-radius: 20px;
  border: 1px solid rgb(99, 99, 99);
  margin-left: -0px;
  padding-left: -4px;
}

#messageboxouter {
  width: 100%;
  overflow: hidden;
  height: 46px;
}

.input-field.inline {
    display: inline-block;
    vertical-align: middle;
    margin-left: 0px;
}

textarea.materialize-textarea {
    overflow-y: hidden;
    padding: 8px 0px 0px 5px;
    resize: none;
    min-height: 50px;
    margin: 0px 0px 0px 0px;
    line-height: initial;
    border-bottom: none;
}

textarea.materialize-textarea:focus:not([readonly]) {
    border-bottom: none;
    box-shadow: none;
}

.currentuserchip {
  display: inline-block;
  position: relative;
  top: -6px;
  padding: 6px;
  padding-right: 9px;
  background-color: #455a64;
}

#currentuserimage_parent {
  display: inline-block;
  vertical-align: middle;
}

.currentuserimage {
  width: 30px;
}

.currentusername {
  display: inline-block;
  position: relative;
  top: 7px;
  left: 5px;
}

#curuser_discrim {
  font-size: 50%;
  color: #FFFFFF;
  color: var(--discrim);
}

#curuser_discrim,
#curuser_name {
  margin-top: -2px;
}

#currentuserimage {
  margin-right: 4px;
}

.input-field {
  position: relative;
  top: -19px;
}

.left {
  float: left;
}

.modal {
  background-color: #546E7A;
  background-color: var(--modal);
  border-radius: 25px;
}

.modal-overlay {
  height: auto;
}

.betatag {
  font-variant: small-caps;
  font-size: 15px;
  color: #eceff1;
}

#channeltopic {
  width: 80%;
  margin-left: 30px;
  margin-right: auto;
  font-size: 85%;
}

label {
  color: white;
}

a {
  color: #82b1ff;
}

#chatcontent a:hover {
  text-decoration: underline;
}
/* ... */

